# rust-developer

./: .gitignore  README.adoc
ex02_slugify/: Cargo.toml
ex02_slugify/src/: main.rs
ex05_err_handling/: Cargo.toml
ex05_err_handling/src/: csv_table.rs  err.rs  main.rs
ex07_threading/: Cargo.toml
ex07_threading/src/: commands.rs  csv_table.rs  err.rs  main.rs
ex09_networking/: Cargo.toml
ex09_networking/src/: err.rs  main.rs  message.rs  message_tcp_stream.rs
ex11_crates/: Cargo.toml
ex11_crates/ex11-bin/: Cargo.toml
ex11_crates/ex11-bin/src/: main.rs
ex11_crates/ex11-client/: Cargo.toml
ex11_crates/ex11-client/src/: client.rs
ex11_crates/ex11-server/: Cargo.toml
ex11_crates/ex11-server/src/: server.rs
ex11_crates/ex11-shared/: Cargo.toml
ex11_crates/ex11-shared/src/: err.rs  lib.rs  message.rs  message_tcp_stream.rs
ex13_err_handling/: Cargo.toml
ex13_err_handling/ex13-bin/: Cargo.toml
ex13_err_handling/ex13-bin/src/: cli.rs  main.rs
ex13_err_handling/ex13-client/: Cargo.toml
ex13_err_handling/ex13-client/src/: client.rs
ex13_err_handling/ex13-server/: Cargo.toml
ex13_err_handling/ex13-server/src/: server.rs
ex13_err_handling/ex13-shared/: Cargo.toml
ex13_err_handling/ex13-shared/src/: message_tcp_stream.rs
ex15_tokio/: .gitignore  Cargo.toml
ex15_tokio/ex15-bin/: Cargo.toml
ex15_tokio/ex15-bin/src/: main.rs
ex15_tokio/ex15-client/: Cargo.toml
ex15_tokio/ex15-client/src/: client.rs
ex15_tokio/ex15-server/: Cargo.toml
ex15_tokio/ex15-server/src/: lib.rs  server.rs  users.rs
ex15_tokio/ex15-shared/: Cargo.toml
ex15_tokio/ex15-shared/src/: message.rs  message_tcp_stream.rs
ex15_tokio/ex15-shared/tests/: integration.rs
ex17_web/: Cargo.toml  Rocket.toml
ex17_web/ex17-bin/: Cargo.toml
ex17_web/ex17-bin/src/: cli.rs  main.rs
ex17_web/ex17-client/: Cargo.toml
ex17_web/ex17-client/src/: client.rs
ex17_web/ex17-server/: Cargo.toml
ex17_web/ex17-server/src/: lib.rs  server.rs  users.rs  web.rs  web_auth.rs
ex17_web/ex17-server/templates/: index.html.tera  login.html.tera  root.html.tera
ex17_web/ex17-shared/: Cargo.toml
ex17_web/ex17-shared/src/: message.rs  message_tcp_stream.rs
ex17_web/ex17-shared/tests/: integration.rs
ex18_metrics/: Cargo.toml  Dockerfile  README.md  Rocket.toml  docker-compose.yml  grafana-prometheus.yml  prometheus.yml
ex18_metrics/ex18-bin/: Cargo.toml
ex18_metrics/ex18-bin/src/: main.rs
ex18_metrics/ex18-client/: Cargo.toml
ex18_metrics/ex18-client/src/: client.rs
ex18_metrics/ex18-server/: Cargo.toml
ex18_metrics/ex18-server/src/: lib.rs  metrics.rs  server.rs  users.rs  web.rs  web_user.rs
ex18_metrics/ex18-server/templates/: index.html.tera  root.html.tera  tables.html.tera
ex18_metrics/ex18-shared/: Cargo.toml
ex18_metrics/ex18-shared/src/: lib.rs
ex18_metrics/ex18-shared/tests/: integration.rs
hello_world/src/: main.rs
