[package]
name = "ex11_crates"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
clap = { version = "4.4.7", features = ["derive"] }
flume = "0.11.0"
lazy_static = "1.4.0"
regex = "1.10.2"
serde = "1.0.190"
serde_derive = "1.0.190"
