[workspace]
members = [
    "ex11-shared",
    "ex11-client",
    "ex11-server",
    "ex11-bin",
]
resolver="2"

[workspace.dependencies]
log = "0.4.20"
env_logger = "0.10.1"
simplelog = "0.12.1"
bincode = "1.3.3"
clap = { version = "4.4.7", features = ["derive"] }
flume = "0.11.0"
lazy_static = "1.4.0"
regex = "1.10.2"
serde = "1.0.190"
serde_derive = "1.0.190"
