[workspace]
members = [
    "ex13-shared",
    "ex13-client",
    "ex13-server",
    "ex13-bin",
]
resolver="2"

[workspace.dependencies]
log = "0.4.20"
env_logger = "0.10.1"
simplelog = "0.12.1"
bincode = "1.3.3"
clap = { version = "4.4.7", features = ["derive"] }
flume = "0.11.0"
lazy_static = "1.4.0"
regex = "1.10.2"
serde = "1.0.190"
serde_derive = "1.0.190"
chrono = "0.4.31"
anyhow = "1.0.75"
thiserror = "1.0.50"
