[workspace]
members = [
    "ex18-shared",
    "ex18-client",
    "ex18-server",
    "ex18-bin",
]
resolver = "2"

[workspace.dependencies]
log = "0.4.20"
env_logger = "0.10.1"
simplelog = "0.12.1"
bincode = "1.3.3"
clap = { version = "4.4.7", features = ["derive"] }
lazy_static = "1.4.0"
regex = "1.10.2"
serde = "1.0.190"
serde_derive = "1.0.190"
chrono = "0.4.31"
anyhow = "1.0.75"
thiserror = "1.0.50"
rand = "0.8.5"
sha256 = "1.4.0"
uuid = { version = "1.6.1", features = ["v4"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio", "sqlite"] }
rocket = { version = "0.5.0", features = ["secrets"] }
rocket_dyn_templates = { version = "0.1.0", features = ["tera"] }
prometheus = "0.13.3"