[package]
name = "ex11-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ex11-shared = { path = "../ex11-shared" }
flume = { workspace = true }
log = { workspace = true }
serde = { workspace = true }

