[package]
name = "ex13-shared"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
bincode = { workspace = true }
regex = { workspace = true }
log = { version = "0.4.20", features = [] }