[package]
name = "ex15-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ex15-shared = { path = "../ex15-shared" }
thiserror = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }

