[package]
name = "ex17-bin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ex17-shared = { path = "../ex17-shared" }
ex17-client = { path = "../ex17-client" }
ex17-server = { path = "../ex17-server" }
anyhow = { workspace = true }
clap = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
chrono = { workspace = true }
rocket = { workspace = true }
