[package]
name = "ex17-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ex17-shared = { path = "../ex17-shared" }
thiserror = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
sha256 = { workspace = true }
uuid = { workspace = true }
lazy_static = { workspace = true }
rocket = { workspace = true }
rocket_dyn_templates = { workspace = true }