[package]
name = "ex18-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ex18-shared = { path = "../ex18-shared" }
thiserror = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
rocket = { workspace = true }
